fixed newlines not showing in ingredients and instructions in posts

--- a/public/css/post.css
+++ b/public/css/post.css
@@ -97,3 +97,7 @@ span.datetime {
 li {
     list-style-type: none;
    }
+
+.recipe-content {
+    white-space: pre-line;
+}
